feat: inspect effective hotspot vm options